--- a/5bit/isa/Makefile
+++ b/5bit/isa/Makefile
@@ -15,7 +15,7 @@ all: projekt
 
 main.o: src/main.cpp
 	$(CC) $(CFLAGS) src/main.cpp -c
-	
+
 params.o: src/params.cpp src/params.hpp
 	$(CC) $(CFLAGS) src/params.cpp -c
 
@@ -23,8 +23,11 @@ myldap.o: src/myldap.cpp src/myldap.hpp
 	$(CC) $(CFLAGS) src/myldap.cpp -c
 
 projekt: main.o params.o myldap.o
-	$(CC) $(CFLAGS) main.o params.o myldap.o -o myldap
+	$(CC) $(CFLAGS) main.o params.o myldap.o -o myldap -lpthread
 	rm *.o
 
 clear:
 	rm *.o
+
+test: test/test.cxx
+	$(CC) $(CFLAGS) test/test.cxx -o test/test
