--- a/5bit/isa/Makefile
+++ b/5bit/isa/Makefile
@@ -16,22 +16,18 @@ all: projekt
 main.o: src/main.cpp
 	$(CC) $(CFLAGS) src/main.cpp -c
 
-params.o: src/params.cpp src/params.hpp
+params.o: src/params.cpp
 	$(CC) $(CFLAGS) src/params.cpp -c
 
-myldap.o: src/myldap.cpp src/myldap.hpp
+encoding.o: src/encoding.cpp
+	$(CC) $(CFLAGS) src/encoding.cpp -c
+
+myldap.o: src/myldap.cpp
 	$(CC) $(CFLAGS) src/myldap.cpp -c
 
-projekt: main.o params.o myldap.o
-	$(CC) $(CFLAGS) main.o params.o myldap.o -o myldap -lpthread
+projekt: main.o params.o encoding.o myldap.o
+	$(CC) $(CFLAGS) main.o params.o encoding.o myldap.o -o myldap -lpthread
 	rm myldap.o
 
 clear:
 	rm *.o
-
-test.o: test/test.cxx
-	$(CC) $(CFLAGS) test/test.cxx -c -lpthread
-
-test: test.o
-	$(CC) $(CFLAGS) test.o -o test/test -lpthread
-	rm test.o
