--- a/5bit/ims/Makefile
+++ b/5bit/ims/Makefile
@@ -10,12 +10,19 @@
 
 CC=g++
 CFLAGS=-O2 -g -Wall -Wextra -Werror -pedantic
+NAME=vyroba_vina
 
 all: wine
 
-wine: src/vinobrani.cpp
-	$(CC) $(CFLAGS) src/vinobrani.cpp -o vinobrani -lsimlib
+wine: src/$(NAME).cpp
+	$(CC) $(CFLAGS) src/$(NAME).cpp -o $(NAME) -lsimlib
 
 run:
-	./vinobrani
+	./$(NAME) 1 3 10 120
+	./$(NAME) 2 4 10 120
+	./$(NAME) 3 4 15 240
+	./$(NAME) 4 8 10 120
+	./$(NAME) 5 1 10 120
 
+clean:
+	rm $(NAME) experiment_*.out
