POS: projekt2 done

--- a/mis/2mis/pos/projekt2/Makefile
+++ b/mis/2mis/pos/projekt2/Makefile
@@ -9,7 +9,7 @@
 SOURCE=projekt2.c
 TARGET=shell
 CC=gcc
-CFLAGS=-Wall -Wextra -pedantic
+CFLAGS=-Wall -Wextra -pedantic -g -O
 
 # compilation
 all: clean
