FLP: projekt2 almost done

--- a/mis/2mis/flp/projekt2/Makefile
+++ b/mis/2mis/flp/projekt2/Makefile
@@ -12,7 +12,8 @@ ZIPFILE=flp-log-xaubre02.zip
 
 # compilation
 all: clean
-	swipl -q -g start -c ${SOURCE} -o ${TARGET}
+	swipl -q -g start -o ${TARGET} -c ${SOURCE}
+	rm -rf *.out
 
 # zip
 zip:
