FLP: projekt2 Makefile: modified

--- a/mis/2mis/flp/projekt2/Makefile
+++ b/mis/2mis/flp/projekt2/Makefile
@@ -17,7 +17,7 @@ all: clean
 
 # zip
 zip:
-	zip ${ZIPFILE} ${SOURCE} README Makefile
+	zip ${ZIPFILE} ${SOURCE} README Makefile tests/*
 
 # cleanup
 clean:
